feat(security): Cors allows PATCH HTTP method